--- a/roles/postgresql/tasks/main.yml
+++ b/roles/postgresql/tasks/main.yml
@@ -1,23 +1,23 @@
 
 
-- name: "postgresql"
-  docker_service:
-    project_name: postgresql
-    definition:
-      version: "3.3" 
-      services:
-        db:
-          image: postgres:3.3
-          container_name: db
-          ports: 
-            - "5432:5432"
-          network_mode: host
-          restart: always
-          volumes:
-            - db:/var/lib/postgresql/data
-          environment:
-            POSTGRES_DB: ${DB_preprod}
-            POSTGRES_USER: ${titi}
-            POSTGRES_PASSWORD: ${toto}
+- name: postgresql
+  docker_container:
+    name: postgresql
+    image: postgresql:latest
+    restart: yes
+    ports:
+      - 5432:5432
+    networks:
+      - name: postgresql_net 
+    volumes:
+      - postgre-data
+
+
+- name: postgresql user
+  postgresql_user: 
+    db: {{database}}
+    name: {{db_user}}
+    password: {{db_passwd}}
+
 
 
